--- a/app/platforms/android/res/xml/config.xml
+++ b/app/platforms/android/res/xml/config.xml
@@ -13,4 +13,7 @@
     </author>
     <content src="index.html" />
     <access origin="*" />
+    <feature name="GetAccountsPlugin">
+        <param name="android-package" value="com.bvarga.getaccounts.GetAccountsPlugin" />
+    </feature>
 </widget>
